<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校讯通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="personalcenter">个人中心</string>
    <string name="forget"><u>账号注册</u></string>
    <string name="un_revise">不可修改信息</string>
    <string name="revise">可修改信息</string>
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_title_iat">听写设置</string>
    <string name="preference_title_iat_engine">听写引擎</string>
    <string name="preference_default_iat_engine">iat</string>
    <string name="login_title">登录</string>
    <string name="login_user_error">用户名错误</string>
    <string name="login_password_error">密码错误</string>
    <string name="login_user_type_error">角色错误</string>
    <string name="server_error">网络连接失败</string>
    <string name="user_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="password_lenth_error">密码不能少于6位</string>
    <string name="user">请输入用户名:</string>
    <string name="password">请输入密码:</string>
    <string name="user_type">角色：</string>
    <string name="login_success">登录成功</string>
    <string name="voice_no_person">没有找到此人</string>
    <string name="voice_no_news">没有找到此新闻</string>
    <string name="news_college">学校风采</string>
    <string name="news_class">班级风采</string>
    <string name="news_community">社团风采</string>
    <string name="news_rules">校风校纪</string>
    <string name="map_locationing">正在定位</string>
    <string name="map_location">定位功能</string>
    <string name="map_key_success">key认证成功</string>
    <string name="map_input_true">输入正确的检索条件!</string>
    <string name="map_init_error">BMapManager  初始化错误!</string>
    <string name="map_send_message">说点什么吧</string>
    <string name="map_send_picture">添加图片</string>
    <string name="map_send_picture_long">长按可取消发送图片</string>
    <string name="map_get_location">获取位置信息</string>
    <string name="map_send_title">发送信息</string>
    <string name="map_send_success">上传成功</string>
    <string name="map_send_fail">上传失败</string>
    <string name="map_message_success">信息上传成功</string>
    <string name="map_message_fail">信息上传失败</string>
    <string name="emerge_get_success">获取成功</string>
    <string name="emerge_get_fail">获取失败</string>
    <string name="emerge_title">紧急情况</string>
    <string name="emerge_refresh">正在刷新</string>
    <string name="emerge_colleage">请选择学院</string>
    <string name="emerge_grade">请选择年级</string>
    <string name="emerge_profession">请选择专业</string>
    <string name="emerge_class">请选择班级</string>
    <string name="emerge_class_dialog">请选择班级对话框</string>
    <string name="emerge_sure">确认</string>
    <string name="emerge_cancle">取消</string>
    <string name="emerge_colleage_check">选择学院</string>
    <string name="emerge_grade_check">选择年级</string>
    <string name="emerge_class_check">选择班级</string>
    <string name="emerge_profession_check">选择专业</string>
    <string name="emerge_toast">提示</string>
    <string name="emerge_colleage_empty">学院不能为空</string>
    <string name="emerge_grade_empty">年级不能为空</string>
    <string name="emerge_class_empty">班级不能为空</string>
    <string name="emerge_profession_empty">专业不能为空</string>
    <string name="emerge_contact_title">联系人</string>
    <string name="register_title">注册</string>
    <string name="register_user_name">姓名:</string>
    <string name="register_user_nickname">昵称:</string>
    <string name="register_user_num">学号:</string>
    <string name="register_user_phone">手机号:</string>
    <string name="register_user_carid">身份证号:</string>
    <string name="register_user_password">输入7—16位密码:</string>
    <string name="register_check_college">请选择学院</string>
    <string name="register_check_grade">请选择年级</string>
    <string name="register_check_profession">请选择专业</string>
    <string name="register_check_class">请选择班级</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="register_nickname_error">昵称重复</string>
    <string name="register_username_error">用户名错误</string>
    <string name="register_no_user">没有此用户，请检查数据是否正确</string>
    <string name="register_no_server">服务端没有返回值</string>
    <string name="register_username_empty">姓名不能为空</string>
    <string name="register_nickname_empty">昵称不能为空</string>
    <string name="register_usernum_empty">学号不能为空</string>
    <string name="register_phone_empty">手机号不能为空</string>
    <string name="register_cardid_empty">身份证号不能为空</string>
    <string name="registering">注册中</string>
    <string name="register_password_rules">密码不符合格式，请重新输入</string>
    <string name="register_headteacher_txt">辅导员</string>
    <string name="register_teacher_txt">教     师</string>
    <string name="register_student_txt">学     生</string>
    <string name="exit_software">注销登录</string>
    <string name="attend_title">考勤</string>
    <string name="query_name_title">快速查询</string>
    <string name="query_title">考勤查询</string>

    <array name="teacher_choice">

        <!-- <item name="location">手动定位</item> -->
        <item name="address">位置信息</item>
        <item name="weather">今日天气</item>
        <item name="drivepath">路径规划</item>
        <item name="navinavi">实时导航</item>
        <item name="emulatornavi">模拟导航</item>
        <item name="information">实时信息</item>
    </array>
    <array name="student_choice">
        <!-- <item name="location">手动定位</item> -->
        <item name="address">位置信息</item>
        <item name="weather">今日天气</item>
        <item name="sendmsg">发送消息</item>
    </array>
    <array name="headteacher_choice">
        <!-- <item name="location">手动定位</item> -->
        <item name="address">位置信息</item>
        <item name="weather">今日天气</item>
    </array>

</resources>