<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"
        android:paddingTop="10dip" 
        android:background="#00b1e6">

        <TextView
            android:id="@+id/news_tv1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/news_college"
            android:textColor="@color/lightwhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/news_tv2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/news_class"
            android:textColor="@color/lightwhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/news_tv3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/news_community"
            android:textColor="@color/lightwhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/news_tv4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/news_rules"
            android:textColor="@color/lightwhite"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="3dip" >

        <ImageView
            android:id="@+id/news_iv"
            android:layout_width="70dp"
            android:layout_height="2dip"
            android:layout_marginLeft="5dip"
            android:scaleType="matrix"
            android:src="#fff" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

</LinearLayout>