<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.beiyuan.appyujing.view.TitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/msgEdit"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/map_send_message"
                android:minLines="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_pCut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light_2"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/main_img" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/imageload"
                    android:layout_width="176dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.75"
                    android:background="@color/transparent"
                    android:text="@string/map_send_picture"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/map_send_picture_long"
                    android:textColor="@color/gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light_2"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/main_img" />

            <TextView
                android:id="@+id/tv_position"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:minLines="2"
                android:text="@string/map_get_location"
                android:textColor="@color/gray"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/chatcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="140dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/chatto_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center"
            android:lineSpacingExtra="2dp"
            android:minHeight="50dp"
            android:textColor="#ff000000"
            android:textSize="15sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/btn_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/voicebtn" />
    </RelativeLayout>
    <!-- 录音显示UI层 -->

    <LinearLayout
        android:id="@+id/chat_ui"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:visibility="gone" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            layout="@layout/voice_rcd_hint_window" />
    </LinearLayout>

</RelativeLayout>