<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_a_img"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lv1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="170dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_name_style"
                android:drawableLeft="@drawable/user_name_img"
                android:hint="@string/user"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginLeft="34dip"
            android:layout_marginRight="34dip"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="horizontal" >

            <com.beiyuan.appyujing.view.EditClick
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginLeft="34dip"
            android:layout_marginRight="34dip"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/class_layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/login_type_style"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dip"
                android:text="@string/user_type"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/login_shenfen"
                android:layout_width="210dip"
                android:layout_height="46dip"
                android:layout_gravity="center_vertical"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="40dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_bt_login"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:background="@drawable/login_btn_style" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="8dip" >

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textColor="@color/gray"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>