<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <com.beiyuan.appyujing.view.TitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dip"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/teacher_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:hint="@string/register_user_name"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textSize="18dip" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/teacher_nickname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:hint="@string/register_user_nickname"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textSize="18dip" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/teacher_usernum"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:hint="@string/register_user_phone"
                        android:inputType="number"
                        android:maxLength="11"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textSize="18dip" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/teacher_useridcard"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:hint="@string/register_user_carid"
                        android:maxLength="18"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textSize="18dip" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <com.beiyuan.appyujing.view.EditClick
                        android:id="@+id/teacher_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/teacher_college_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <com.beiyuan.appyujing.view.EditClick
                        android:id="@+id/register_teacher_college"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/teacher_grade_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <com.beiyuan.appyujing.view.EditClick
                        android:id="@+id/register_teacher_grade"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>